Reliable file retrieval